k8s/base/billing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-stable
  namespace: platform
  labels:
    app: billing
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: billing
  ports:
    - name: http
      port: 9093
      targetPort: 9093
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: billing-canary
  namespace: platform
  labels:
    app: billing
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: billing
  ports:
    - name: http
      port: 9093
      targetPort: 9093
      protocol: TCP
  type: ClusterIP
